--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ highlight_theme: syntax-base16.monokai.dark # select a dark theme for the code h
 # Author settings
 author: Refstop # add your name
 author-pic: profile.jpg
-about-author: Engineer, industry executive, research enthusiast. Avid learner with diverse interests in coding, machine learning, artificial intelligence and reinforcement learning. 17+ years of experience working in multinational corporations.
+about-author: Deep Learning 및 SLAM을 공부하고 있습니다.
 
 # Contact links
 email: bhbhchoi@yu.ac.kr # Add your Email address
